# colibrie

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
colibri/: core.py  extract_tables.py  intersection.py  lines.py  tables.py  utils.py
colibrie/: core.py  extract_tables.py  geometry.py  geometry_operation.py  intersection.py  lines.py  segments.py  tables.py  utils.py
src/: core.py  extract_tables.py  geometry.py  intersection.py  lines.py  tables.py  utils.py
test/unit/: test_lines.py
test/unit/lines_assets/: expected_fragmented_lines_test_1.py  expected_fragmented_lines_test_2.py  expected_fragmented_lines_test_3.py  expected_fragmented_lines_test_4.py  expected_fragmented_lines_test_5.py  expected_fragmented_lines_test_6.py  expected_fragmented_lines_test_7.py  expected_fragmented_lines_test_empty.py
tests/unit/: test_lines.py
tests/unit/lines_assets/: expected_fragmented_lines_test_1.py  expected_fragmented_lines_test_2.py  expected_fragmented_lines_test_3.py  expected_fragmented_lines_test_4.py  expected_fragmented_lines_test_5.py  expected_fragmented_lines_test_6.py  expected_fragmented_lines_test_7.py  expected_fragmented_lines_test_empty.py
